[gd_scene load_steps=48 format=3 uid="uid://b0alcauh40g2"]

[ext_resource type="Script" path="res://Codi/Jugador.gd" id="1_ex5sr"]
[ext_resource type="Texture2D" uid="uid://gjmh7l6sslg3" path="res://Recursos/GFX/mobs/purp guy idle.png" id="1_np5ix"]
[ext_resource type="Texture2D" uid="uid://xcfbr1p2qwi7" path="res://Recursos/GFX/mobs/purp guy hurt.png" id="2_qqc8x"]
[ext_resource type="Texture2D" uid="uid://diy5ujm7iaiwe" path="res://Recursos/GFX/mobs/purp guy walcc.png" id="3_ktsfv"]
[ext_resource type="Texture2D" uid="uid://7s8cxfak8e7t" path="res://Recursos/GFX/mobs/purp guy jump.png" id="3_lnh3s"]
[ext_resource type="Script" path="res://Escenes/Game Elements/PlayerAnimation.gd" id="5_5bwpl"]
[ext_resource type="Script" path="res://Codi/player_collision_handler.gd" id="5_n8ndh"]
[ext_resource type="Texture2D" uid="uid://xmwfturhsvvr" path="res://Recursos/GFX/mobs/purp guy rip.png" id="5_t80kb"]
[ext_resource type="Script" path="res://Codi/hurt_receiver_area.gd" id="7_v1kkh"]
[ext_resource type="Script" path="res://Codi/player_health.gd" id="8_md152"]
[ext_resource type="PackedScene" uid="uid://cxswysvu7qs5q" path="res://Escenes/Components/health_label.tscn" id="9_as7wq"]
[ext_resource type="Script" path="res://Codi/hurtful_area.gd" id="12_ubdp5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rt68s"]
atlas = ExtResource("2_qqc8x")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlabe"]
atlas = ExtResource("2_qqc8x")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_brudm"]
atlas = ExtResource("2_qqc8x")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqmkc"]
atlas = ExtResource("2_qqc8x")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjomd"]
atlas = ExtResource("1_np5ix")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3yex"]
atlas = ExtResource("1_np5ix")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgy2d"]
atlas = ExtResource("1_np5ix")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo2jk"]
atlas = ExtResource("1_np5ix")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xurd"]
atlas = ExtResource("1_np5ix")
region = Rect2(64, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyykm"]
atlas = ExtResource("1_np5ix")
region = Rect2(80, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqw4a"]
atlas = ExtResource("3_lnh3s")
region = Rect2(80, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0umfy"]
atlas = ExtResource("3_lnh3s")
region = Rect2(96, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_si7is"]
atlas = ExtResource("3_lnh3s")
region = Rect2(112, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0x2h"]
atlas = ExtResource("3_lnh3s")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cogys"]
atlas = ExtResource("3_lnh3s")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8jxv"]
atlas = ExtResource("3_lnh3s")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7l6n"]
atlas = ExtResource("3_lnh3s")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i20q0"]
atlas = ExtResource("3_lnh3s")
region = Rect2(64, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_l84m1"]
atlas = ExtResource("3_lnh3s")
region = Rect2(80, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_udnit"]
atlas = ExtResource("5_t80kb")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju1h1"]
atlas = ExtResource("5_t80kb")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsatl"]
atlas = ExtResource("5_t80kb")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvmcj"]
atlas = ExtResource("5_t80kb")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ca4x"]
atlas = ExtResource("5_t80kb")
region = Rect2(64, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkk5l"]
atlas = ExtResource("5_t80kb")
region = Rect2(80, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ut0cu"]
atlas = ExtResource("5_t80kb")
region = Rect2(96, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecm0y"]
atlas = ExtResource("5_t80kb")
region = Rect2(112, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7i47"]
atlas = ExtResource("3_ktsfv")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_muydu"]
atlas = ExtResource("3_ktsfv")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vymfl"]
atlas = ExtResource("3_ktsfv")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgdep"]
atlas = ExtResource("3_ktsfv")
region = Rect2(0, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_7jbtw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt68s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlabe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brudm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqmkc")
}],
"loop": false,
"name": &"Hurt",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjomd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3yex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgy2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo2jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xurd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyykm")
}],
"loop": true,
"name": &"Idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqw4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0umfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si7is")
}],
"loop": false,
"name": &"Jump Down",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0x2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cogys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8jxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7l6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i20q0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l84m1")
}],
"loop": true,
"name": &"Jump Up",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_udnit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju1h1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsatl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvmcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ca4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkk5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ut0cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecm0y")
}],
"loop": false,
"name": &"Rip",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7i47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muydu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vymfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgdep")
}],
"loop": true,
"name": &"Run",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nyeyq"]
radius = 5.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_in2hu"]
radius = 6.0
height = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hr7dx"]
radius = 4.12311

[node name="Player2D" type="CharacterBody2D"]
z_index = 10
collision_layer = 2
collision_mask = 5
floor_stop_on_slope = false
floor_constant_speed = true
floor_snap_length = 3.0
script = ExtResource("1_ex5sr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 10
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_7jbtw")
animation = &"Rip"
autoplay = "Idle"
script = ExtResource("5_5bwpl")

[node name="PhysicsHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_nyeyq")
script = ExtResource("5_n8ndh")

[node name="HurtReceiverArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5
script = ExtResource("7_v1kkh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtReceiverArea"]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_in2hu")
debug_color = Color(0.679951, 0.503828, 0, 0.42)

[node name="Health" type="Node2D" parent="."]
script = ExtResource("8_md152")
immortality_time = 0.5

[node name="Label" parent="Health" instance=ExtResource("9_as7wq")]

[node name="HurtfulArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4
script = ExtResource("12_ubdp5")

[node name="StompHitbox" type="CollisionShape2D" parent="HurtfulArea"]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_hr7dx")
debug_color = Color(0.961976, 0, 0.507259, 0.42)

[connection signal="area_entered" from="HurtReceiverArea" to="HurtReceiverArea" method="_on_area_entered"]
